--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@types/react-select": "^5.0.0",
+        "react-select": "^5.10.2"
     }
 }
